<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PracticeActivity">

    <Switch
        android:id="@+id/swhLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/practice_language_chinese"
        android:textOff="@string/practice_language_english"
        android:checked="true"
        android:showText="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpBodyPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/swhLanguage"
        app:layout_constraintBottom_toTopOf="@id/sbProgress" />

    <SeekBar
        android:id="@+id/sbProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/pPracticeStatus"/>

    <LinearLayout
        android:id="@+id/pPracticeStatus"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/practice_completed" />

        <TextView
            android:id="@+id/tvPracticeStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="200/200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/practice_time_left" />

        <TextView
            android:id="@+id/tvTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="00:00" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>